[gd_scene load_steps=7 format=2]

[ext_resource path="res://Duende.gd" type="Script" id=1]
[ext_resource path="res://Sprits/Duende/Duende.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 58.2683, 71.2336 )

[sub_resource type="Animation" id=2]
resource_name = "Ataque"
length = 7.2
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Atauque"
length = 4.2
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 19 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Correr"
length = 7.2
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 15 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 0 ]
}

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -111.134, -72.3368 )
scale = Vector2( 3.18556, 3.18556 )
texture = ExtResource( 2 )
hframes = 20
frame = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -35.6929, -72.25 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 9.0
anims/Ataque = SubResource( 2 )
anims/Atauque = SubResource( 3 )
anims/Correr = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]

[node name="Duende_Izquierda" type="RayCast2D" parent="."]
position = Vector2( -99.5975, -61.5603 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 100 )

[node name="Duende_Derecha" type="RayCast2D" parent="."]
position = Vector2( 22.6331, -61.8228 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 100 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
